# GoBigger

./: .coveragerc  .gitignore  README.md  requirements.txt  setup.py
.github/workflows/: unit_test.yml
_cgobigger/: CMakeLists.txt  bind.cpp
_cgobigger/balls/: baseball.h  baseball_test.cpp  cloneball.h  foodball.h  sporeball.h  thornsball.h
_cgobigger/managers/: base_manager.h  base_manager_test.cpp  food_manager.h  player_manager.h  spore_manager.h  thorns_manager.h
_cgobigger/server/: server.h  server_test.cpp
_cgobigger/utils/: collision_detection.h  file_helper.h  file_helper_test.cpp  structures.h  structures_test.cpp  utils.h
cgobigger/agents/: __init__.py  bot_agent.py
cgobigger/render/: base_render.py  env_render.py  realtime_render.py
cgobigger/server/: server.py
cgobigger/utils/: __init__.py
docs/: requirements.txt
docs/en/: requirements.txt
docs/source/: conf.py
gobigger/: test.py
gobigger/agents/: __init__.py  base_agent.py  bot_agent.py  level_agent.py  smart_agent.py
gobigger/balls/: __init__.py  base_ball.py  clone_ball.py  food_ball.py  spore_ball.py  thorns_ball.py
gobigger/configs/: __init__.py  server_default_config.py  server_sp_default_config.py  sp_t4p3.py  sp_v0.py  st_t1p1.py  st_t1p2.py  st_t2p1.py  st_t2p2.py  st_t3p2.py  st_t4p3.py  st_t5p3.py  st_t5p4.py  st_t6p4.py  st_v0.py
gobigger/envs/: __init__.py  gobigger_env.py  gobigger_sp_env.py
gobigger/hyper/: __init__.py  actions.py
gobigger/managers/: __init__.py  base_manager.py  food_manager.py  player_manager.py  (+3 more)
practice/: README.md  battle.py  test_ai.py
(+120 files in other folders)
